--- a/run_model_V4.1-MPP_param_fin_height.ipynb
+++ b/run_model_V4.1-MPP_param_fin_height.ipynb
@@ -43,22 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# U = np.linspace(0,4,10)\n",
-    "# H = np.array([bht.ht_fins_forced_wiki(1.,0.009,x) for x in U])\n",
-    "# H2 = np.array([bht.ht_fins_forced_wiki2(1.,0.009,x) for x in U])\n",
-    "# plt.scatter(U,H)\n",
-    "# plt.scatter(U,H2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_name = r'\\Inputs_Triple_Solar.xlsx'\n",
-    "hyp_name = r'\\Model_hypotheses_TS.xlsx'\n",
-    "data_name = r'\\221228_TUV_test_conditions_TS.xlsx'\n",
+    "input_name = r'\\Inputs_V4.1.xlsx'\n",
+    "hyp_name = r'\\Model_hypotheses_V4.1.xlsx'\n",
+    "data_name = r'\\TUV_test_conditions_V4.1NI_MPP.xlsx'\n",
     "\n",
     "par = pr.import_input(r'G:\\Drive partagés\\BU04-Innovation\\PVT-perf-1Dmodel\\Inputs',input_name)\n",
     "hyp = pr.create_dict_from_excel(r'G:\\Drive partagés\\BU04-Innovation\\PVT-perf-1Dmodel\\Hypotheses',hyp_name,'Main')\n",
@@ -80,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr.disp_html(list_df[0])"
+    "dfL = pd.DataFrame(np.array([10,20,30,40,50,100,150,200])/1000,columns=['L_f2'])"
    ]
   },
   {
@@ -89,7 +76,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr.disp_html(df_res)"
+    "A0_list = []\n",
+    "A1_list = []\n",
+    "\n",
+    "for i in range(len(dfL)):\n",
+    "    par[\"exchanger\"][\"L_f0\"] = dfL['L_f2'][i]\n",
+    "    print(par[\"exchanger\"][\"L_f0\"] )\n",
+    "    df_res,X,list_res,list_df,list_df_historic = ty.simu_condi(par,hyp,condi)\n",
+    "    [tab_m,X_m] = sk.find_SK_SST(df_res,par['AG'],columns_list=[1,1,0,1,0,0,1,0,0])\n",
+    "    A0_list.append(X_m[0][0]-X_m[0][6]*(1.3-3))\n",
+    "    A1_list.append(X_m[0][1]+X_m[0][3]*(1.3-3))"
    ]
   },
   {
@@ -98,10 +94,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[tab,X] = sk.find_SK_SST(condi,par['AG'],columns_list=[0,1,0,1,0,0,0,0,0])\n",
+    "A0_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfL['A0'] = A0_list\n",
+    "dfL['A1'] = A1_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create figure and axis objects with subplots()\n",
+    "fig,ax = plt.subplots()\n",
+    "# make a plot\n",
+    "\n",
+    "ax.plot(dfL['L_f2'],dfL['A0']*100,color=\"red\",marker=\"+\")\n",
+    "\n",
+    "# set x-axis label\n",
+    "\n",
+    "ax.set_xlabel(\"Number of risers in meander\", fontsize = 14)\n",
+    "\n",
+    "# set y-axis label\n",
+    "\n",
+    "ax.set_ylabel(\"A0\",\n",
+    "              color=\"red\",\n",
+    "              fontsize=14)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.))\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter('%.0f%%'))\n",
+    "# ax.yaxis.set_major_formatter(mtick.FormatStrFormatter('%.2f'))\n",
+    "\n",
+    "# ax.axhline(y = 0.999*0.396177,label='98% of the maximum performance',color='green')\n",
+    "# ax.axvline(x = 0.4, label = 'Thickness of the tested prototype',color='black')\n",
+    "# ax.axhline(y = 0.394,color='black')\n",
+    "# ax.axvline(x = 1.3,color='green')\n",
+    "# ax.legend()\n",
+    "\n",
+    "ax.grid()\n",
+    "# twin object for two dif       ferent y-axis on the sample plot\n",
+    "ax2=ax.twinx()\n",
+    "# make a plot with different y-axis using second axis object\n",
+    "ax2.plot(dfL['L_f2'],dfL['A1'],color=\"blue\",marker=\"+\")\n",
+    "ax2.set_ylabel(\"A1\",color=\"blue\",fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[tab,X] = sk.find_SK_SST(condi,par['AG'],columns_list=[1,1,0,1,0,0,1,0,0])\n",
     "X_df = pd.DataFrame(X[0],index = ['eta0,hem','a1','a2','a3','a4','a5','a6','a7','a8'],columns=['TÜV'])\n",
     "\n",
-    "[tab_m,X_m] = sk.find_SK_SST(df_res,par['AG'],columns_list=[0,1,0,1,0,0,0,0,0])\n",
+    "[tab_m,X_m] = sk.find_SK_SST(df_res,par['AG'],columns_list=[1,1,0,1,0,0,1,0,0])\n",
     "X_df['Linear fit model 1D'] = X_m[0]\n",
     "\n",
     "pr.disp_html(X_df)"
@@ -113,7 +188,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "15.86+2.216*(-1.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr.disp_html(list_res[14][\"inlet_man\"][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr.disp_html(list_res[14][\"exchanger\"][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pr.disp_html(df_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_list = df_res['u'].unique()"
    ]
   },
   {
@@ -131,14 +242,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pr.disp_html(df_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# powers = [\"Q_S\",\"Q_top_conv\",\"Q_top_rad\",\"Q_tube_back_conv\",\"Q_tube_back_rad\",\"Q_f01\"]\n",
+    "\n",
+    "df_res[\"-Q_top_conv\"] = -df_res[\"Q_top_conv\"]\n",
+    "df_res[\"-Q_top_rad\"] = -df_res[\"Q_top_rad\"]\n",
+    "\n",
+    "df_res[\"-Q_ins_absfin_back_conv\"] = -df_res[\"Q_ins_absfin_back_conv\"]\n",
+    "df_res[\"-Q_ins_absfin_back_rad\"] = -df_res[\"Q_ins_absfin_back_rad\"]\n",
     "df_res[\"-Q_tube_back_conv\"] = -df_res[\"Q_tube_back_conv\"]\n",
     "df_res[\"-Q_tube_back_rad\"] = -df_res[\"Q_tube_back_rad\"]\n",
-    "df_res[\"-Q_f01\"] = -df_res[\"Q_f01\"]\n",
+    "# df_res[\"-Q_f01\"] = -df_res[\"Q_f01\"]\n",
     "\n",
-    "df_select_u = df_res.loc[df_res[\"u\"]==1.89]\n",
+    "df_select_u = df_res.loc[df_res[\"u\"]==0.7]\n",
     "\n",
-    "powers = [\"Q_Base_tube\",\"-Q_tube_back_conv\",\"-Q_tube_back_rad\",\"-Q_f01\"]\n",
+    "powers = [\"Q_S\",\"-Q_top_conv\",\"-Q_top_rad\",\"-Q_ins_absfin_back_conv\",\"-Q_ins_absfin_back_rad\",\"-Q_tube_back_conv\",\"-Q_tube_back_rad\"]\n",
     "\n",
     "df_hist = df_select_u\n",
     "\n",
@@ -156,30 +282,38 @@
     "\n",
     "\n",
     "for i in range(len(powers)):\n",
-    "    str = powers[i]\n",
-    "    \n",
-    "    dict_pos[str] = np.array(ty.pos_df(df_hist,str))\n",
-    "    dict_neg[str] = np.array(ty.neg_df(df_hist,str))\n",
+    "    pow = powers[i]\n",
     "\n",
-    "    if i==0:\n",
-    "        dict_pos_agg[str] = 0*np.array(ty.pos_df(df_hist,str))\n",
-    "        dict_neg_agg[str] = dict_pos_agg[str]\n",
+    "    if i == 0:\n",
+    "\n",
+    "    \n",
+    "        dict_pos[pow] = 16*np.array(ty.pos_df(df_hist,pow))\n",
+    "        dict_neg[pow] = 16*np.array(ty.neg_df(df_hist,pow))\n",
     "\n",
     "    else:\n",
-    "        dict_pos_agg[str] = dict_pos_agg[powers[i-1]] + dict_pos[powers[i-1]]\n",
-    "        dict_neg_agg[str] = dict_neg_agg[powers[i-1]] + dict_neg[powers[i-1]]\n",
+    "        dict_pos[pow] = np.array(ty.pos_df(df_hist,pow))\n",
+    "        dict_neg[pow] = np.array(ty.neg_df(df_hist,pow))\n",
+    "\n",
+    "    if i==0:\n",
+    "        dict_pos_agg[pow] = 0*np.array(ty.pos_df(df_hist,pow))\n",
+    "        dict_neg_agg[pow] = dict_pos_agg[pow]\n",
+    "\n",
+    "    else:\n",
+    "        dict_pos_agg[pow] = dict_pos_agg[powers[i-1]] + dict_pos[powers[i-1]]\n",
+    "        dict_neg_agg[pow] = dict_neg_agg[powers[i-1]] + dict_neg[powers[i-1]]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "width = 0.35\n",
     "\n",
     "# labels_list = ['Sun','Front convection','Front radiation','Back convection and radiation']\n",
+    "# powers = [\"Q_S\",\"-Q_top_conv\",\"-Q_top_rad\",\"-Q_ins_absfin_back_conv\",\"-Q_ins_absfin_back_rad\",\"-Q_tube_back_conv\",\"-Q_tube_back_rad\"]\n",
     "labels_list = powers\n",
-    "colors_list = ['orange','blue','cyan','green']\n",
+    "colors_list = ['red','blue','cyan','green','lightgreen','orange','purple']\n",
     "\n",
-    "for i,str in enumerate(powers):\n",
-    "    ax.bar(DT_list, dict_pos[str], width, bottom=dict_pos_agg[str], label=labels_list[i], color=colors_list[i])\n",
-    "    ax.bar(DT_list, dict_neg[str], width, bottom=dict_neg_agg[str], color=colors_list[i])\n",
+    "for i,pow in enumerate(powers):\n",
+    "    ax.bar(DT_list, dict_pos[pow], width, bottom=dict_pos_agg[pow], label=labels_list[i], color=colors_list[i])\n",
+    "    ax.bar(DT_list, dict_neg[pow], width, bottom=dict_neg_agg[pow], color=colors_list[i])\n",
     "\n",
     "ax.plot(DT_list,df_hist[\"Q_tube_fluid\"],color=\"red\",label=\"Q_fluid\")\n",
     "# ax.plot(labels,np.array(N_disp*[list_PL[q]]))\n",
@@ -237,9 +371,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "u_list = list(set(condi[\"u\"]))\n",
-    "\n",
+    "u_list = df_res['u'].unique()\n",
     "fig = go.Figure()\n",
     "\n",
     "for i in range(len(u_list)):\n",
@@ -275,7 +415,7 @@
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
-    "        'text': \"Triple Solar Ladnscape dark front wind\",\n",
+    "        'text': \"V4.1 dark front wind\",\n",
     "        'y':0.9,\n",
     "        'x':0.5,\n",
     "        'xanchor': 'center',\n",
