--- a/run_model_V4.41GB-dark-front_param_insulation.ipynb
+++ b/run_model_V4.41GB-dark-front_param_insulation.ipynb
@@ -113,15 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ins_list = [0.] + ins_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ins_list = [0.] + ins_list\n",
     "X_df_param = X_df.copy()\n",
     "X_df_param.drop(columns=['TUV'],inplace=True)\n",
     "X_df.loc['A1'] = X_df.loc['a1'] + (-1.7)*X_df.loc['a3']\n",
