--- a/run_model_S425.ipynb
+++ b/run_model_S425.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "import plot_functions as pfun\n",
+    "import plot_functions_here as pfun\n",
     "\n",
     "import sys\n",
     "sys.path.insert(0,r'C:\\Users\\valen\\Dropbox (DualSun)\\PC\\Documents\\GitHub\\RD-systems-and-test-benches')\n",
