--- a/test-heat-transfer.ipynb
+++ b/test-heat-transfer.ipynb
@@ -36,7 +36,7 @@
     "import model as ty\n",
     "import proc as pr\n",
     "import heat_transfer as bht\n",
-    "import plot_functions as pfun\n",
+    "import plot_functions_here as pfun\n",
     "# importing sys\n",
     "import sys\n",
     "\n",
