--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -91,6 +91,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_one['T_sky']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bal,bal_perc = ty.recap_energy_balances(df_one)"
    ]
   },
@@ -101,6 +110,183 @@
    "outputs": [],
    "source": [
     "bal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a directed graph\n",
+    "G = nx.DiGraph()\n",
+    "\n",
+    "# Add nodes with labels including temperature\n",
+    "nodes = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base', 'T_absfin', \n",
+    "         'T_tube', 'T_fluid', 'T_ins_absfin', 'T_ins_tube', 'T_back', 'T_back_rad']\n",
+    "\n",
+    "nodes_keys = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base_mean', 'T_absfin_mean',\n",
+    "                'T_tube_mean', 'T_fluid_mean', 'T_ins_absfin_mean', 'T_ins_tube_mean', 'T_back', 'T_back_rad']\n",
+    "\n",
+    "for i,node in enumerate(nodes):\n",
+    "    if node == \"Sun\":\n",
+    "        G.add_node(node, label=node)\n",
+    "    else:\n",
+    "        G.add_node(node, label=f\"{node} = {round(df_one[nodes_keys[i]].iloc[0]-273.15,1)} °C\")\n",
+    "\n",
+    "# Add edges with heat transfer labels\n",
+    "edges = [('Sun','T_glass','Qdot_sun_glass'),('Sun','T_PV','Qdot_sun_PV'),\n",
+    "         ('T_glass', 'T_amb', 'Qdot_top_conv'),('T_glass', 'T_sky', 'Qdot_top_rad'),\n",
+    "         ('T_glass', 'T_PV', 'Qdot_glass_PV'), ('T_PV', 'T_Base', 'Qdot_PV_Base'),\n",
+    "         ('T_PV', 'T_absfin', 'Qdot_PV_absfin'), ('T_absfin', 'T_Base', 'Qdot_absfin_Base'),\n",
+    "         ('T_Base', 'T_tube', 'Qdot_Base_tube'), ('T_tube', 'T_fluid', 'Qdot_tube_fluid'),\n",
+    "         ('T_absfin', 'T_ins_absfin', ''),\n",
+    "         ('T_tube', 'T_ins_tube', ''),\n",
+    "         ('T_ins_absfin', 'T_back', ''),\n",
+    "         ('T_ins_absfin', 'T_back_rad', ''),\n",
+    "         ('T_ins_tube', 'T_back', ''),\n",
+    "         ('T_ins_tube', 'T_back_rad', '')]\n",
+    "\n",
+    "for u, v, label in edges:\n",
+    "    if label == '':\n",
+    "        G.add_edge(u, v)\n",
+    "    else:\n",
+    "        G.add_edge(u, v, label=f\"{round(df_one[label].iloc[0],1)} W\")\n",
+    "\n",
+    "# Manually set positions based on TikZ coordinates\n",
+    "pos = {'Sun': (14,0),\n",
+    "    'T_amb': (3, 0),\n",
+    "    'T_sky': (6, 0),\n",
+    "    'T_glass': (12, -6),\n",
+    "    'T_PV': (12, -12),\n",
+    "    'T_Base': (9, -20),\n",
+    "    'T_absfin': (14, -20),\n",
+    "    'T_tube': (7, -25),\n",
+    "    'T_fluid': (7, -33),\n",
+    "    'T_ins_absfin': (15, -30),\n",
+    "    'T_ins_tube': (12, -30),\n",
+    "    'T_back': (12, -37),\n",
+    "    'T_back_rad': (15, -37)\n",
+    "}\n",
+    "\n",
+    "# Draw the graph with updated node labels\n",
+    "node_labels = nx.get_node_attributes(G, 'label')\n",
+    "nx.draw(G, pos, labels=node_labels, with_labels=True, node_color='lightblue', edge_color='black')\n",
+    "\n",
+    "# Draw edge labels with updated heat transfer values\n",
+    "edge_labels = nx.get_edge_attributes(G, 'label')\n",
+    "nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as patches\n",
+    "\n",
+    "def draw_diagram(W, Htube, Dtube, L, w_tube, l_plate, upper_gap, abs_gap, insulation_thickness):\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    # Draw the main rectangle (the outer box)\n",
+    "    main_rectangle = patches.Rectangle((0, 0), W, Htube, linewidth=1, edgecolor='black', facecolor='none')\n",
+    "    ax.add_patch(main_rectangle)\n",
+    "\n",
+    "    # Draw the tube\n",
+    "    tube = patches.Rectangle((W/2 - w_tube/2, upper_gap + abs_gap), w_tube, Dtube, linewidth=1, edgecolor='black', facecolor='none')\n",
+    "    ax.add_patch(tube)\n",
+    "    \n",
+    "    # Draw the riser plate\n",
+    "    riser_plate = patches.Rectangle((W/2 - w_tube/2, upper_gap + abs_gap + Dtube), w_tube, l_plate, linewidth=1, edgecolor='black', facecolor='none')\n",
+    "    ax.add_patch(riser_plate)\n",
+    "    \n",
+    "    # Add insulation below\n",
+    "    insulation = patches.Rectangle((0, Htube - insulation_thickness), W, insulation_thickness, linewidth=1, edgecolor='black', facecolor='none')\n",
+    "    ax.add_patch(insulation)\n",
+    "\n",
+    "    # Set the limits of the plot\n",
+    "    ax.set_xlim(-10, W + 10)\n",
+    "    ax.set_ylim(-10, Htube + 10)\n",
+    "\n",
+    "    # Set equal scaling\n",
+    "    ax.set_aspect('equal')\n",
+    "\n",
+    "    # Remove the axes\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "    # Add dimension lines (using arrows)\n",
+    "    ax.annotate(\"\", xy=(0, Htube + 5), xytext=(W, Htube + 5), arrowprops=dict(arrowstyle='<->'))\n",
+    "    ax.text(W/2, Htube + 6, f\"W={W}\", ha='center')\n",
+    "\n",
+    "    ax.annotate(\"\", xy=(-5, 0), xytext=(-5, Htube), arrowprops=dict(arrowstyle='<->'))\n",
+    "    ax.text(-6, Htube/2, f\"Htube={Htube}\", va='center', rotation='vertical')\n",
+    "\n",
+    "    ax.annotate(\"\", xy=(W/2 + w_tube/2 + 1, upper_gap + abs_gap), xytext=(W/2 + w_tube/2 + 1, upper_gap + abs_gap + Dtube), arrowprops=dict(arrowstyle='<->'))\n",
+    "    ax.text(W/2 + w_tube/2 + 2, upper_gap + abs_gap + Dtube/2, f\"Dtube={Dtube}\", va='center', rotation='vertical')\n",
+    "\n",
+    "    # Save the figure\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "draw_diagram(W=300, Htube=100, Dtube=30, L=150, w_tube=50, l_plate=20, upper_gap=10, abs_gap=5, insulation_thickness=10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr.disp_html(df_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['T_PV_absfin_mean']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_PV_absfin']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_absfin_Base']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_absfin_back_conv']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_absfin_back_rad']"
    ]
   },
   {
@@ -226,68 +412,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Create a directed graph\n",
-    "G = nx.DiGraph()\n",
-    "\n",
-    "# Add nodes with labels including temperature\n",
-    "nodes = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base', 'T_absfin', \n",
-    "         'T_tube', 'T_fluid', 'T_ins_absfin', 'T_ins_tube', 'T_back', 'T_back_rad']\n",
-    "\n",
-    "nodes_keys = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base_mean', 'T_absfin_mean',\n",
-    "                'T_tube_mean', 'T_fluid_mean', 'T_ins_absfin_mean', 'T_ins_tube_mean', 'T_back', 'T_back_rad']\n",
-    "\n",
-    "for i,node in enumerate(nodes):\n",
-    "    if node == \"Sun\":\n",
-    "        G.add_node(node, label=node)\n",
-    "    else:\n",
-    "        G.add_node(node, label=f\"{node} = {round(df_one[nodes_keys[i]].iloc[0]-273.15,1)} °C\")\n",
-    "\n",
-    "# Add edges with heat transfer labels\n",
-    "edges = [('Sun','T_glass','Qdot_sun_glass'),('Sun','T_PV','Qdot_sun_PV'),\n",
-    "         ('T_glass', 'T_amb', 'Qdot_top_conv'),('T_glass', 'T_sky', 'Qdot_top_rad'),\n",
-    "         ('T_glass', 'T_PV', 'Qdot_glass_PV'), ('T_PV', 'T_Base', 'Qdot_PV_Base'),\n",
-    "         ('T_PV', 'T_absfin', 'Qdot_PV_absfin'), ('T_absfin', 'T_Base', 'Qdot_absfin_Base'),\n",
-    "         ('T_Base', 'T_tube', 'Qdot_Base_tube'), ('T_tube', 'T_fluid', 'Qdot_tube_fluid'),\n",
-    "         ('T_absfin', 'T_ins_absfin', ''),\n",
-    "         ('T_tube', 'T_ins_tube', ''),\n",
-    "         ('T_ins_absfin', 'T_back', ''),\n",
-    "         ('T_ins_absfin', 'T_back_rad', ''),\n",
-    "         ('T_ins_tube', 'T_back', ''),\n",
-    "         ('T_ins_tube', 'T_back_rad', '')]\n",
-    "\n",
-    "for u, v, label in edges:\n",
-    "    if label == '':\n",
-    "        G.add_edge(u, v)\n",
-    "    else:\n",
-    "        G.add_edge(u, v, label=f\"{round(df_one[label].iloc[0],1)} W\")\n",
-    "\n",
-    "# Manually set positions based on TikZ coordinates\n",
-    "pos = {'Sun': (3,0),\n",
-    "    'T_amb': (9, 0),\n",
-    "    'T_sky': (14, 0),\n",
-    "    'T_glass': (12, -6),\n",
-    "    'T_PV': (12, -12),\n",
-    "    'T_Base': (9, -20),\n",
-    "    'T_absfin': (14, -20),\n",
-    "    'T_tube': (7, -25),\n",
-    "    'T_fluid': (7, -33),\n",
-    "    'T_ins_absfin': (15, -30),\n",
-    "    'T_ins_tube': (12, -30),\n",
-    "    'T_back': (12, -37),\n",
-    "    'T_back_rad': (15, -37)\n",
-    "}\n",
-    "\n",
-    "# Draw the graph with updated node labels\n",
-    "node_labels = nx.get_node_attributes(G, 'label')\n",
-    "nx.draw(G, pos, labels=node_labels, with_labels=True, node_color='lightblue', edge_color='black')\n",
-    "\n",
-    "# Draw edge labels with updated heat transfer values\n",
-    "edge_labels = nx.get_edge_attributes(G, 'label')\n",
-    "nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels)\n",
-    "\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
