--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slices_df,df_one,its_df_list = ty.simu_one_steady_state(par['exchanger'],par_p,hyp)"
+    "# slices_df,df_one,its_df_list = ty.simu_one_steady_state(par,par_p,hyp)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_one['T_sky']"
+    "df_one,res = ty.simu_one_steady_state_all_he(par,par_p,hyp)"
    ]
   },
   {
@@ -100,7 +100,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bal,bal_perc = ty.recap_energy_balances(df_one)"
+    "bal,bal_perc = ty.recap_energy_balances(res['inlet_man']['df_one'])\n",
+    "print('inlet',bal)\n",
+    "bal,bal_perc = ty.recap_energy_balances(res['exchanger']['df_one'])\n",
+    "print('exchanger',bal)\n",
+    "bal,bal_perc = ty.recap_energy_balances(res['outlet_man']['df_one'])\n",
+    "print('outlet',bal)"
    ]
   },
   {
@@ -109,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bal"
+    "pr.disp_html(res['inlet_man']['df_one'])"
    ]
   },
   {
@@ -118,66 +123,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a directed graph\n",
-    "G = nx.DiGraph()\n",
-    "\n",
-    "# Add nodes with labels including temperature\n",
-    "nodes = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base', 'T_absfin', \n",
-    "         'T_tube', 'T_fluid', 'T_ins_absfin', 'T_ins_tube', 'T_back', 'T_back_rad']\n",
-    "\n",
-    "nodes_keys = ['Sun','T_amb', 'T_sky', 'T_glass', 'T_PV', 'T_Base_mean', 'T_absfin_mean',\n",
-    "                'T_tube_mean', 'T_fluid_mean', 'T_ins_absfin_mean', 'T_ins_tube_mean', 'T_back', 'T_back_rad']\n",
-    "\n",
-    "for i,node in enumerate(nodes):\n",
-    "    if node == \"Sun\":\n",
-    "        G.add_node(node, label=node)\n",
-    "    else:\n",
-    "        G.add_node(node, label=f\"{node} = {round(df_one[nodes_keys[i]].iloc[0]-273.15,1)} °C\")\n",
-    "\n",
-    "# Add edges with heat transfer labels\n",
-    "edges = [('Sun','T_glass','Qdot_sun_glass'),('Sun','T_PV','Qdot_sun_PV'),\n",
-    "         ('T_glass', 'T_amb', 'Qdot_top_conv'),('T_glass', 'T_sky', 'Qdot_top_rad'),\n",
-    "         ('T_glass', 'T_PV', 'Qdot_glass_PV'), ('T_PV', 'T_Base', 'Qdot_PV_Base'),\n",
-    "         ('T_PV', 'T_absfin', 'Qdot_PV_absfin'), ('T_absfin', 'T_Base', 'Qdot_absfin_Base'),\n",
-    "         ('T_Base', 'T_tube', 'Qdot_Base_tube'), ('T_tube', 'T_fluid', 'Qdot_tube_fluid'),\n",
-    "         ('T_absfin', 'T_ins_absfin', ''),\n",
-    "         ('T_tube', 'T_ins_tube', ''),\n",
-    "         ('T_ins_absfin', 'T_back', ''),\n",
-    "         ('T_ins_absfin', 'T_back_rad', ''),\n",
-    "         ('T_ins_tube', 'T_back', ''),\n",
-    "         ('T_ins_tube', 'T_back_rad', '')]\n",
-    "\n",
-    "for u, v, label in edges:\n",
-    "    if label == '':\n",
-    "        G.add_edge(u, v)\n",
-    "    else:\n",
-    "        G.add_edge(u, v, label=f\"{round(df_one[label].iloc[0],1)} W\")\n",
-    "\n",
-    "# Manually set positions based on TikZ coordinates\n",
-    "pos = {'Sun': (14,0),\n",
-    "    'T_amb': (3, 0),\n",
-    "    'T_sky': (6, 0),\n",
-    "    'T_glass': (12, -6),\n",
-    "    'T_PV': (12, -12),\n",
-    "    'T_Base': (9, -20),\n",
-    "    'T_absfin': (14, -20),\n",
-    "    'T_tube': (7, -25),\n",
-    "    'T_fluid': (7, -33),\n",
-    "    'T_ins_absfin': (15, -30),\n",
-    "    'T_ins_tube': (12, -30),\n",
-    "    'T_back': (12, -37),\n",
-    "    'T_back_rad': (15, -37)\n",
-    "}\n",
-    "\n",
-    "# Draw the graph with updated node labels\n",
-    "node_labels = nx.get_node_attributes(G, 'label')\n",
-    "nx.draw(G, pos, labels=node_labels, with_labels=True, node_color='lightblue', edge_color='black')\n",
-    "\n",
-    "# Draw edge labels with updated heat transfer values\n",
-    "edge_labels = nx.get_edge_attributes(G, 'label')\n",
-    "nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels)\n",
-    "\n",
-    "plt.show()"
+    "pfun.plot_graph(res['inlet_man']['df_one'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pfun.plot_graph(res['exchanger']['df_one'])"
    ]
   },
   {
