--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stepConditions = ty.write_stepConditions_from_steadyStateConditions(steadyStateConditions_df,0,hyp)"
+    "# stepConditions = pr.write_stepConditions_from_steadyStateConditions(steadyStateConditions_df,0,hyp)"
    ]
   },
   {
