--- a/Test-calibrage-modele.ipynb
+++ b/Test-calibrage-modele.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (990390854.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 20\u001b[1;36m\u001b[0m\n\u001b[1;33m    (,),\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Création de la matrice \"A\" sous forme de dictionnaire\n",
     "\n",
@@ -164,21 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.  , 1.  , 1.  , 1.  , 1.  , 1.  , 1.  , 1.  , 1.  , 1.  ],\n",
-       "       [0.8 , 0.05, 0.9 , 0.9 , 0.8 , 0.8 , 0.8 , 0.  , 0.  , 0.  ]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Création de la matrice \"A\" sous forme de listes\n",
     "\n",
@@ -216,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +213,39 @@
     "    [0., 0.],\n",
     "    [0., 0.],\n",
     "    [0., 0.]\n",
-    "    ]\n",
-    "\n"
+    "    ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m = len(correspondance_matrice)\n",
+    "nb_measured_case = len(X_list)\n",
+    "\n",
+    "# MAJ de hyp en fonction des méthodes que l'on veut\n",
+    "hyp = init_hyp(\"method_h_back_hx\", \"free\")\n",
+    "\n",
+    "\n",
+    "def Qdot_model_tube_fluid(X_list, model_matrix, correspondance_matrice) :\n",
+    "        Qdot_list = []\n",
+    "        \n",
+    "        # Actualise le modèle\n",
+    "        for i in range(m) : \n",
+    "                if correspondance_matrice[i, 0] != 0. : \n",
+    "                       hyp[correspondance_matrice[i,0]] = model_matrix[i, 0]\n",
+    "\n",
+    "        # Actualise la géométrie\n",
+    "        for j in range(nb_measured_case) : \n",
+    "                for i in range(m) :\n",
+    "                        if correspondance_matrice[i, 0] != 0. :\n",
+    "                                X_list[j]['componentSpecs'][correspondance_matrice[i,1]] = model_matrix[i, j]\n",
+    "                df_one = ty.simu_one_steady_state_all_he(X_list[j]['componentSpecs'], X_list[j]['stepConditions'], hyp)[0]\n",
+    "                Qdot_list.append(df_one['Qdot_tube_fluid'])\n",
+    "        return(Qdot_list)"
+   ]
   }
  ],
  "metadata": {
