--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Case': 'Normal_CESIFroid_v1',\n",
+       " 'G': 800,\n",
+       " 'T_amb': 298.15,\n",
+       " 'T_back': 273.15,\n",
+       " 'u': 1e-05,\n",
+       " 'u_back': 0,\n",
+       " 'T_fluid_in0': 293.15,\n",
+       " 'Gp': 4,\n",
+       " 'T_sky': 273.15,\n",
+       " 'T_back_rad': 273.15,\n",
+       " 'mdot': 0.0478,\n",
+       " 'guess_T_PV': 270}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "stepConditions = steadyStateConditions_df.to_dict(orient='records')\n",
@@ -74,11 +96,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sigma': 5.67e-08,\n",
+       " 'fluid': 'MPG',\n",
+       " 'glycol_rate': 0.4,\n",
+       " 'p_fluid': 2,\n",
+       " 'theta': 45,\n",
+       " 'Cp0': 4186,\n",
+       " 'method_h_top_g_exchanger': 'free_forced_with_coeff',\n",
+       " 'method_h_top_g_manifold': 'like_exchanger',\n",
+       " 'method_h_back_manifold': 'like_exchanger',\n",
+       " 'method_h_back_anomaly': 'like_exchanger',\n",
+       " 'method_h_back_hx': 'free',\n",
+       " 'coeff_h_top_free': 1,\n",
+       " 'coeff_h_top_forced': 1,\n",
+       " 'coeff_h_back': 1,\n",
+       " 'coeff_h_back_fins_free': 1,\n",
+       " 'coeff_h_back_fins_forced': 1,\n",
+       " 'offset_h_back_fins': 0,\n",
+       " 'h_rad_f': 1,\n",
+       " 'coeff_h_rad_f': 1e-05,\n",
+       " 'h_back_fins_calc': 'abs',\n",
+       " 'calc_h_back_manifold': 1,\n",
+       " 'calc_h_back_mean': 0,\n",
+       " 'inlet_manifold_in_wind': 0,\n",
+       " 'h_top_turbulent': 0,\n",
+       " 'h_top0': 6,\n",
+       " 'h_back0': 0.5,\n",
+       " 'h_rad_back0': 0.5,\n",
+       " 'h_rad_tube_sky0': 1.5,\n",
+       " 'h_back_tube0': 3,\n",
+       " 'h_rad_back_tube0': 2,\n",
+       " 'h_rad_f0': 1,\n",
+       " 'h_back_fins0': 2,\n",
+       " 'u_back': 0,\n",
+       " 'T_back_changed': 0,\n",
+       " 'T_back_rad_changed': 0}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# stepConditions = pr.write_stepConditions_from_steadyStateConditions(steadyStateConditions_df,0,hyp)"
+    "# stepConditions = ty.write_stepConditions_from_steadyStateConditions(steadyStateConditions_df,0,hyp)\n",
+    "hyp"
    ]
   },
   {
@@ -1136,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
