--- a/Test_simu_to_html.ipynb
+++ b/Test_simu_to_html.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "folder_path = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel'\n",
-    "geometry_path = folder_path + '\\\\' + 'Inputs\\\\Inputs_TEST_GMI.xlsx'\n",
+    "geometry_path = folder_path + '\\\\' + 'Panels\\\\Inputs_TEST_GMI.xlsx'\n",
     "hypotheses_path = folder_path + '\\\\' + 'Hypotheses\\\\Model_hypotheses.xlsx'\n",
     "condi_path = folder_path + '\\\\' + 'Steady-state conditions inputs\\\\100424-tests-conditions-GMI.xlsx'\n",
     "\n",
