--- a/visualization/draw_test_notebook.ipynb
+++ b/visualization/draw_test_notebook.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "folder_path = r'G:\\Drive partagés\\Cercle Hard\\Production\\R&D - Modèles numériques\\PVT-perf-1Dmodel'\n",
-    "geometry_path = folder_path + '\\\\' + 'Inputs\\\\Inputs_TEST.xlsx'\n",
+    "geometry_path = folder_path + '\\\\' + 'Panels\\\\Inputs_TEST.xlsx'\n",
     "hypotheses_path = folder_path + '\\\\' + 'Hypotheses\\\\Model_hypotheses.xlsx'\n",
     "condi_path = folder_path + '\\\\' + 'Steady-state conditions inputs\\\\221122_TUV_test_conditions_S425-I_MPP.xlsx'\n",
     "\n",
