--- a/Test-calibrage-modele.ipynb
+++ b/Test-calibrage-modele.ipynb
@@ -35,8 +35,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "model23",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
