--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -50,15 +50,16 @@
    "outputs": [],
    "source": [
     "folder_path = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel'\n",
-    "geometry_path = folder_path + '\\\\' + 'Inputs\\\\Inputs_TEST_GMI.xlsx'\n",
+    "geometry_path = folder_path + '\\\\' + 'Panels\\\\Inputs_TEST_GMI (2).xlsx'\n",
     "hypotheses_path = folder_path + '\\\\' + 'Hypotheses\\\\Model_hypotheses.xlsx'\n",
     "condi_path = folder_path + '\\\\' + 'Steady-state conditions inputs\\\\100424-tests-conditions-GMI.xlsx'\n",
     "\n",
     "output_name = 'TEST_n1'\n",
     "\n",
-    "componentSpecs = pr.import_geometry(geometry_path)\n",
+    "panelSpecs = pr.import_geometry(geometry_path)\n",
     "hyp = pr.create_dict_from_excel(hypotheses_path,'Main')\n",
-    "steadyStateConditions_df = pd.read_excel(condi_path,header=2) ## Les deux première lignes ne sont pas à prendre"
+    "steadyStateConditions_df = pd.read_excel(condi_path,header=2) ## Les deux première lignes ne sont pas à prendre\n",
+    "stepConditions = steadyStateConditions_df.to_dict(orient='records')"
    ]
   },
   {
@@ -89,9 +90,81 @@
     }
    ],
    "source": [
-    "\n",
-    "stepConditions = steadyStateConditions_df.to_dict(orient='records')\n",
-    "stepConditions[1]\n"
+    "# pr.disp_html(steadyStateConditions_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one,res = ty.simu_one_steady_state_all_he(panelSpecs,stepConditions[61],hyp)\n",
+    "df_residuals = ty.recap_residuals(panelSpecs, df_one, res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res['part1']['slices_df']['a_f']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_it = hyp['big_it']\n",
+    "CFD_ht = pd.read_csv(hyp['CFD_ht_path']+f'_{big_it}.csv',sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CFD_ht"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "componentSpecs = panelSpecs['part1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "componentSpecs['name'] = 'part2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CFD_ht.loc[CFD_ht['component'] == componentSpecs['name']]['phi_top'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var['h_back_tube'] = "
    ]
   },
   {
@@ -182,9 +255,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_one,res = ty.simu_one_steady_state_all_he(componentSpecs,stepConditions[0],hyp)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -202,13 +273,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for part in componentSpecs['decomp'].keys():\n",
-    "    bal,bal_perc = ty.recap_energy_balances(res[part]['df_one'])\n",
-    "    print(part,bal_perc)\n",
-    "bal,bal_perc = ty.recap_energy_balances(df_one)\n",
-    "print('Total',bal_perc)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
