--- a/tests/model_new_notebook.ipynb
+++ b/tests/model_new_notebook.ipynb
@@ -136,7 +136,7 @@
     "def h_rad(par,par_p,T):\n",
     "    return 1.\n",
     "\n",
-    "def h_back(par,par_p,T):\n",
+    "def h_back_abs(par,par_p,T):\n",
     "    return 3.\n",
     "\n",
     "def h_rad_back(par,par_p,T):\n",
@@ -164,7 +164,7 @@
     "        None\"\"\"\n",
     "\n",
     "    T_back = par_p[\"T_back\"]\n",
-    "    R_b = par[\"R_2\"] + 1/(h_back(par,par_p,T)+h_rad_back(par,par_p,T))\n",
+    "    R_b = par[\"R_2\"] + 1/(h_back_abs(par,par_p,T)+h_rad_back(par,par_p,T))\n",
     "\n",
     "    a0 = (1/(h_top(par,par_p,T)+h_rad(par,par_p,T)+1/par[\"R_g\"]))*(par[\"alpha_g\"]*par_p[\"G\"] + h_top(par,par_p,T)*par_p[\"T_amb\"] + h_rad(par,par_p,T)*par_p[\"T_sky\"])\n",
     "    a3 = - (par[\"alpha_g\"]*par_p[\"G\"] - h_top(par,par_p,T)*(a0 - par_p[\"T_amb\"]) - h_rad(par,par_p,T)*(a0 - par_p[\"T_sky\"]))\n",
@@ -187,7 +187,7 @@
     "        None\"\"\"\n",
     "\n",
     "    R_inter = par[\"R_inter\"]\n",
-    "    R_b = par[\"R_2\"] + 1/(h_back(par,par_p,T)+h_rad_back(par,par_p,T))\n",
+    "    R_b = par[\"R_2\"] + 1/(h_back_abs(par,par_p,T)+h_rad_back(par,par_p,T))\n",
     "\n",
     "    return 1/(Fp(par,par_p,T)*R_b) + 1/(R_inter*Fp(par,par_p,T)) - 1/R_inter\n",
     "\n",
