--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = r'G:\\Drive partagés\\Cercle Hard\\R&D\\Modèles numériques PVT\\PVT-perf-1Dmodel'\n",
-    "geometry_path = folder_path + '\\\\' + 'Panels\\\\Inputs_TEST_GMI (2).xlsx'\n",
+    "geometry_path = folder_path + '\\\\' + 'Panels\\\\Inputs_TEST_V4.5_GG.xlsx'\n",
     "hypotheses_path = folder_path + '\\\\' + 'Hypotheses\\\\Model_hypotheses.xlsx'\n",
     "condi_path = folder_path + '\\\\' + 'Steady-state conditions inputs\\\\100424-tests-conditions-GMI.xlsx'\n",
     "\n",
@@ -64,31 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Case': 'Normal_CESIFroid_v1',\n",
-       " 'G': 800,\n",
-       " 'T_amb': 298.15,\n",
-       " 'T_back': 273.15,\n",
-       " 'u': 1e-05,\n",
-       " 'u_back': 0,\n",
-       " 'T_fluid_in0': 293.15,\n",
-       " 'Gp': 4,\n",
-       " 'T_sky': 273.15,\n",
-       " 'T_back_rad': 273.15,\n",
-       " 'mdot': 0.0478,\n",
-       " 'guess_T_PV': 270}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "sC = stepConditions[61]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sC['T_guess_PV'] = (sC['T_fluid_in0']+sC['T_amb'])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# pr.disp_html(steadyStateConditions_df)"
    ]
@@ -99,8 +104,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_one,res = ty.simu_one_steady_state_all_he(panelSpecs,stepConditions[61],hyp)\n",
+    "hyp['method_h_top_g_exchanger'] = 'CFD'\n",
+    "hyp['method_h_back_tube'] = 'CFD'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hyp['big_it'] = 'VDE'\n",
+    "big_it = hyp['big_it']\n",
+    "CFD_ht = pd.read_csv(hyp['CFD_ht_path']+f'_{big_it}.csv',sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one,res = ty.simu_one_steady_state_all_he(panelSpecs,sC,hyp)\n",
     "df_residuals = ty.recap_residuals(panelSpecs, df_one, res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_tube_fluid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr.disp_html(res['part3']['df_one'])"
    ]
   },
   {
@@ -117,10 +170,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "big_it = hyp['big_it']\n",
-    "CFD_ht = pd.read_csv(hyp['CFD_ht_path']+f'_{big_it}.csv',sep=';')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,54 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sigma': 5.67e-08,\n",
-       " 'fluid': 'MPG',\n",
-       " 'glycol_rate': 0.4,\n",
-       " 'p_fluid': 2,\n",
-       " 'theta': 45,\n",
-       " 'Cp0': 4186,\n",
-       " 'method_h_top_g_exchanger': 'free_forced_with_coeff',\n",
-       " 'method_h_top_g_manifold': 'like_exchanger',\n",
-       " 'method_h_back_manifold': 'like_exchanger',\n",
-       " 'method_h_back_anomaly': 'like_exchanger',\n",
-       " 'method_h_back_hx': 'free',\n",
-       " 'coeff_h_top_free': 1,\n",
-       " 'coeff_h_top_forced': 1,\n",
-       " 'coeff_h_back': 1,\n",
-       " 'coeff_h_back_fins_free': 1,\n",
-       " 'coeff_h_back_fins_forced': 1,\n",
-       " 'offset_h_back_fins': 0,\n",
-       " 'h_rad_f': 1,\n",
-       " 'coeff_h_rad_f': 1e-05,\n",
-       " 'h_back_fins_calc': 'abs',\n",
-       " 'calc_h_back_manifold': 1,\n",
-       " 'calc_h_back_mean': 0,\n",
-       " 'inlet_manifold_in_wind': 0,\n",
-       " 'h_top_turbulent': 0,\n",
-       " 'h_top0': 6,\n",
-       " 'h_back0': 0.5,\n",
-       " 'h_rad_back0': 0.5,\n",
-       " 'h_rad_tube_sky0': 1.5,\n",
-       " 'h_back_tube0': 3,\n",
-       " 'h_rad_back_tube0': 2,\n",
-       " 'h_rad_f0': 1,\n",
-       " 'h_back_fins0': 2,\n",
-       " 'u_back': 0,\n",
-       " 'T_back_changed': 0,\n",
-       " 'T_back_rad_changed': 0}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stepConditions = ty.write_stepConditions_from_steadyStateConditions(steadyStateConditions_df,0,hyp)\n",
     "hyp"
@@ -1269,7 +1274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
