--- a/Test-calibrage-modele.ipynb
+++ b/Test-calibrage-modele.ipynb
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Permet de modifier une valeur du dictionnaire hyp\n",
-    "## Par exemple init_hyp('method_h_back_hx','free') va retourner le dictionnaire hyp avec la valeur 'method_h_back_hx' modifié en 'free'\n",
+    "## Par exemple init_hyp('method_h_back_abs','free') va retourner le dictionnaire hyp avec la valeur 'method_h_back_abs' modifié en 'free'\n",
     "def init_hyp(coeff, method) : \n",
     "    hyp[coeff] = method\n",
     "    return(hyp)"
@@ -226,7 +226,7 @@
     "nb_measured_case = len(X_list)\n",
     "\n",
     "# MAJ de hyp en fonction des méthodes que l'on veut\n",
-    "hyp = init_hyp(\"method_h_back_hx\", \"free\")\n",
+    "hyp = init_hyp(\"method_h_back_abs\", \"free\")\n",
     "\n",
     "\n",
     "def Qdot_model_tube_fluid(X_list, model_matrix, correspondance_matrice) :\n",
