--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -68,6 +68,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# panelSpecs['part3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pr.top_area_PV(panelSpecs['part3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sC = stepConditions[61]"
    ]
   },
@@ -105,7 +123,9 @@
    "outputs": [],
    "source": [
     "hyp['method_h_top_g_exchanger'] = 'CFD'\n",
-    "hyp['method_h_back_tube'] = 'CFD'"
+    "hyp['method_h_back_tube'] = 'CFD'\n",
+    "hyp['method_h_back_abs'] = 'CFD'\n",
+    "hyp['method_h_rad_back_tube'] = 'CFD'"
    ]
   },
   {
@@ -114,7 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyp['big_it'] = 'VDE'\n",
+    "hyp['big_it'] = '0'\n",
+    "hyp['CFD_ht_path'] = folder_path + '\\\\' + 'CFD\\\\vde\\\\test'\n",
     "big_it = hyp['big_it']\n",
     "CFD_ht = pd.read_csv(hyp['CFD_ht_path']+f'_{big_it}.csv',sep=';')"
    ]
@@ -125,8 +146,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CFD_ht"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "panelSpecs['part2']['C_B']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_one,res = ty.simu_one_steady_state_all_he(panelSpecs,sC,hyp)\n",
     "df_residuals = ty.recap_residuals(panelSpecs, df_one, res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_one['Qdot_top_conv']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for part in panelSpecs['decomp'].keys():\n",
+    "    if part != 'main':\n",
+    "        print(res[part]['df_one']['Qdot_top_conv'].values[0] / pr.top_area_tube_contact_PV(panelSpecs[part]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for part in panelSpecs['decomp'].keys():\n",
+    "    if part != 'main':\n",
+    "        print(part)\n",
+    "        print('Qdot_tube_back',res[part]['df_one']['Qdot_tube_back_conv'].values[0])\n",
+    "        print('phi_tube', res[part]['df_one']['Qdot_tube_back'].values[0] / pr.back_area_tube_conv_and_rad(panelSpecs[part]))"
    ]
   },
   {
@@ -206,15 +278,6 @@
    "outputs": [],
    "source": [
     "CFD_ht.loc[CFD_ht['component'] == componentSpecs['name']]['phi_top'].values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var['h_back_tube'] = "
    ]
   },
   {
