--- a/CFD/test_GMI.ipynb
+++ b/CFD/test_GMI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +34,11 @@
     "import openpyxl as opxl\n",
     "import matplotlib.ticker as mtick\n",
     "from matplotlib.cm import get_cmap\n",
+    "import time\n",
     "\n",
     "\n",
-    "sys.path.append(r'C:\\Users\\seagu\\OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
-    "sys.path.append(r'C:\\Users\\seagu\\OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
+    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
+    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
     "import jou_gen as jg\n",
     "import ansys_py_bridge as apb\n",
     "import ansys.fluent.core as pyfluent\n",
@@ -100,6 +101,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.700771052237347e-05"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T_fluid_in0 = stepConditions[case]['T_fluid_in0']\n",
+    "theta = apb.get_value('theta', 'named_expression', Inputs)\n",
+    "L_abs = panelSpecs['main']['L_abs']\n",
+    "c = bht.speed_natural_convection(T_fluid_in0, T_amb, theta,L_abs)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "metadata": {}
@@ -112,7 +137,7 @@
     "# Ensuite copier le numéro du server et le modifier ci-dessous\n",
     "solver_path = folder_path_ansys + '\\\\server\\\\' + 'server_info-13112.txt'\n",
     "# Créer une session\n",
-    "solver = pyfluent.connect_to_fluent(server_info_filepath=solver_path)\n",
+    "solver = pyfluent.connect_to_fluent(server_info_file_name=solver_path)\n",
     "tui = solver.tui"
    ]
   },
